welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:12: error: type mismatch;
 found   : Double
 required: Float
	return   Math.round(  0.5  *(a + b - Math.abs(b - a)));
                                   ^